# echo-tui

./: Cargo.toml
src/: app.rs  config.rs  ignite.rs  main.rs  result.rs  state.rs
src/audio/: decoder.rs  mod.rs  player.rs
src/awdio/: metadata.rs  mod.rs  song.rs
src/ui/: canvas.rs  components.rs  event.rs  mod.rs  widget.rs
