[package]
name = "echo-tui"
version = "0.1.0"
edition = "2024"

[alias]
fmt = "fmt"
lint = "clippy --all-targets --all-features -- -D warnings"
precommit = "fmt && clippy --all-targets --all-features -- -D warnings"

[dependencies]
ratatui = { version = "0.29.0", features = ["all-widgets"] }
crossterm = "0.28.1"
tokio = { version = "1.48.0", features = ["full"] }
directories = "6.0.0"
toml = "0.9.8"
serde = { version = "1.0.228", features = ["derive"]}
strum = { version = "0.27", features = ["derive"] }
